welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	(getX() == getMondeLargeur() && getY() == getMondeHauteur())
        ^