welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {

def fonctionTest():Boolean {
	(getX() == getMondeLargeur() && getY() == getMondeHauteur())
}

ecritMessage(1)
while (!fonctionTest) {
	
}

}
